--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,12 @@
   background-color: white;
   color: black
 }
+
+.fixedd {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 10;
+  width: 300px; /* আপনার প্রয়োজন অনুযায়ী width ঠিক করুন */
+  transition: all 0.3s ease;
+}
